fix: Add z-index popup

--- a/style/main.css
+++ b/style/main.css
@@ -56,6 +56,7 @@ button:hover {
   text-align: center;
   padding-top: 5px;
   border-radius: 7px;
+  z-index: 50;
 }
 @media (min-width: 320px) {
   .popup__fill {
